--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+infinispan.remote.server-list=datagridgit:11222
+#infinispan.remote.auth-username=developer
+#infinispan.remote.auth-password=lpejIqjxSKZfHUJd
+#infinispan.remote.auth-realm=default
+#infinispan.remote.sasl-mechanism=DIGEST-MD5
